--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,62 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>Data Lovers</title>
     <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
+</head>
+
+<body>
+    <header>
+        <div id="rectangle" class=""></div>
+        <nav id="screen2" class="">
+            <button id=home><img src="img/HOUSE.png" id=ihome>
+            HOME
+            </button>
+
+        </nav>
+    </header>
+    <main>
+        <img src="img/LOGO.png" id="logo" alt="Logo lol" />
+        <input type="text" id="userName" placeholder="Insert your Username" required/>
+        <button id="play">Play</button><br/>
+        </section>
+        <section id="screen2" class="r">
+            <article>
+                <div id="hello">
+                    <p><strong>HELLO</strong></p>
+                </div>
+                <div id="showName">
+                    <p1></p1>
+                </div>
+            </article><br>
+        </section>
+        <section id="nameLogo1">
+            <p2> <strong>MICRO AND MACRO GAMER</strong> </p2>
+
+            <p2><strong>CHAMPIONS</strong></p2>
+
+        </section>
+        <section id="imsLogo1">
+            <img src="img/micro&macrogamerelipse.png" alt="" />
+            <img src="img/championselipse.png" alt="" />
+
+        </section>
+        <section id="nameLogo2">
+            <p2><strong>NEWS</strong></p2>
+            <p2><strong>UPDATES</strong></p2>
+        </section>
+        <section id="imsLogo2">
+
+            <img src="img/newelipse.png" alt="" />
+            <img src="img/updateselipse.png" alt="" />
+        </section>
+    </main>
+    <footer>
+    </footer>
     <div id="root"></div>
     <script src="main.js" type="module"></script>
-  </body>
+</body>
+
 </html>
