agregar imágenes y modificaciones en src

--- a/src/index.html
+++ b/src/index.html
@@ -3,60 +3,62 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Data Lovers</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
     <header>
-        <div id="rectangle" class=""></div>
-        <nav id="screen2" class="">
-            <button id=home><img src="img/HOUSE.png" id=ihome>
-            HOME
-            </button>
+        <nav>
+            <div id="rectangle" class="">
+                <img src="img/LOGO.png" alt="" class="imgLog">
+                <div><input type="search" placeholder="  Search Champion" class="search">
+                    <a class="search-btn" href="#"></a>
+                </div>
 
+
+                <ol>
+                    <li><a href="https://na.leagueoflegends.com/en-us/latest-news/">NEWS</a></li>
+                    <li><a href="#">EVENTS</a></li><br>
+                    <li><a href="#">UPDATES</a></li>
+                </ol>
+            </div>
         </nav>
     </header>
+    <h1>CHAMPIONS</h1>
     <main>
-        <img src="img/LOGO.png" id="logo" alt="Logo lol" />
-        <input type="text" id="userName" placeholder="Insert your Username" required/>
-        <button id="play">Play</button><br/>
-        </section>
-        <section id="screen2" class="r">
-            <article>
-                <div id="hello">
-                    <p><strong>HELLO</strong></p>
-                </div>
-                <div id="showName">
-                    <p1></p1>
-                </div>
-            </article><br>
-        </section>
-        <section id="nameLogo1">
-            <p2> <strong>MICRO AND MACRO GAMER</strong> </p2>
 
-            <p2><strong>CHAMPIONS</strong></p2>
-
-        </section>
-        <section id="imsLogo1">
-            <img src="img/micro&macrogamerelipse.png" alt="" />
-            <img src="img/championselipse.png" alt="" />
-
-        </section>
-        <section id="nameLogo2">
-            <p2><strong>NEWS</strong></p2>
-            <p2><strong>UPDATES</strong></p2>
-        </section>
-        <section id="imsLogo2">
-
-            <img src="img/newelipse.png" alt="" />
-            <img src="img/updateselipse.png" alt="" />
+        <aside>
+            <button><img src="img/ASSASSINELIPSE.png" alt=""></button><br><br><br><br>
+            <button><img src="img/fighterelipse.png" alt=""></button><br><br><br><br>
+            <button><img src="img/MAGEELIPSE.png" alt=""></button><br><br><br><br>
+            <button><img src="img/MARKSMENELIPSE.png" alt=""></button><br><br><br><br>
+            <button><img src="img/TANKELIPSE.png" alt=""></button><br><br><br><br>
+            <button><img src="img/SUPPORTELIPSE.png" alt=""></button>
+        </aside>
+        <!--Show Champions-->
+        <section id="information" class="informationHeros">
+            <!--<div id="AllChampions">
+            </div>
+            <div id="AllImgChampions">
+            </div>
+            <div id="AllInfoChampions">
+                <div id="divAttack">Attack</div>
+                <div id="divDefense">Defense</div>
+                <div id="divMagic">Magic</div>
+                <div id="divDifficulty">Difficulty</div>
+            </div>-->
         </section>
     </main>
+    <br>
     <footer>
+        <div id="rectanglefooter" class="">
+        </div>
     </footer>
     <div id="root"></div>
     <script src="main.js" type="module"></script>
+
 </body>
 
 </html>
