--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,10 @@
         <nav>
             <div id="rectangle" class="">
                 <img src="img/LOGO.png" alt="" class="imgLog">
-                <div><input type="search" placeholder="  Search Champion" class="search">
+                <div>
+                    <input type="search" placeholder="  Search Champion" class="search">
                     <a class="search-btn" href="#"></a>
                 </div>
-
-
                 <ol>
                     <li><a href="https://na.leagueoflegends.com/en-us/latest-news/">NEWS</a></li>
                     <li><a href="#">EVENTS</a></li><br>
