nuevas modificaciones en filter y button

--- a/src/index.html
+++ b/src/index.html
@@ -29,12 +29,12 @@
     <main>
 
         <aside>
-            <button><img src="img/ASSASSINELIPSE.png" alt=""></button><br><br><br><br>
-            <button><img src="img/fighterelipse.png" alt=""></button><br><br><br><br>
-            <button><img src="img/MAGEELIPSE.png" alt=""></button><br><br><br><br>
-            <button><img src="img/MARKSMENELIPSE.png" alt=""></button><br><br><br><br>
-            <button><img src="img/TANKELIPSE.png" alt=""></button><br><br><br><br>
-            <button><img src="img/SUPPORTELIPSE.png" alt=""></button>
+            <button class="btnFilter" type="button"><img id="assassin" src="img/ASSASSINELIPSE.png" alt=""></button><br><br><br><br>
+            <button class="btnFilter" type="button"><img id="fighter" src="img/fighterelipse.png" alt=""></button><br><br><br><br>
+            <button class="btnFilter" type="button"><img id="mage" src="img/MAGEELIPSE.png" alt=""></button><br><br><br><br>
+            <button class="btnFilter" type="button"><img id="marksmen" src="img/MARKSMENELIPSE.png" alt=""></button><br><br><br><br>
+            <button class="btnFilter" type="button"><img id="tank" src="img/TANKELIPSE.png" alt=""></button><br><br><br><br>
+            <button class="btnFilter" type="button"><img id="support"src="img/SUPPORTELIPSE.png" alt=""></button>
         </aside>
         <!--Show Champions-->
         <section id="information" class="informationHeros">
@@ -48,6 +48,9 @@
                 <div id="divMagic">Magic</div>
                 <div id="divDifficulty">Difficulty</div>
             </div>-->
+        </section>
+        <section>
+            <div id="filter" class="allFilter"></div>
         </section>
     </main>
     <br>
