nuevos cambios en filtrado y orden de campeones

--- a/src/index.html
+++ b/src/index.html
@@ -25,41 +25,81 @@
             </div>
         </nav>
     </header>
-    <h1>CHAMPIONS</h1>
-    <main>
+    <div class="aboutLOL">
+        <div>
+            <h1>ABOUT LEAGUE OF LEGENDS</h1>
+        </div>
+        <div><img class="iconLOL" src="img/micro&macrogamerelipse.png" alt=""><br></div><br>
+        <div class="centerText">
+            League of Legends is a team strategy game in which two teams of five champions face off to see who destroys before the other's base. Choose from a cast of 140 champions to make epic plays, assassinate opponents and take down turrets to rise to victory.
 
-        <aside>
-            <button class="btnFilter" type="button"><img id="assassin" src="img/ASSASSINELIPSE.png" alt=""></button><br><br><br><br>
-            <button class="btnFilter" type="button"><img id="fighter" src="img/fighterelipse.png" alt=""></button><br><br><br><br>
-            <button class="btnFilter" type="button"><img id="mage" src="img/MAGEELIPSE.png" alt=""></button><br><br><br><br>
-            <button class="btnFilter" type="button"><img id="marksmen" src="img/MARKSMENELIPSE.png" alt=""></button><br><br><br><br>
-            <button class="btnFilter" type="button"><img id="tank" src="img/TANKELIPSE.png" alt=""></button><br><br><br><br>
-            <button class="btnFilter" type="button"><img id="support"src="img/SUPPORTELIPSE.png" alt=""></button>
-        </aside>
+        </div>
+    </div>
+
+    <h3>CHAMPIONS</h3>
+    <h4>Type of Champions</h4>
+    <div class="listButton">
+        <button class="btnFilter" type="button" id="assassin"></button><br><br><br><br>
+        <button class="btnFilter" type="button" id="fighter"></button><br><br><br><br>
+        <button class="btnFilter" type="button" id="mage"></button><br><br><br><br>
+        <button class="btnFilter" type="button" id="marksmen"></button><br><br><br><br>
+        <button class="btnFilter" type="button" id="tank"></button><br><br><br><br>
+        <button class="btnFilter" type="button" id="support"></button>
+    </div>
+
+    <h4>Sort list of Champions</h4>
+    <div class="centerButton">
+        <BUTTON id="ZaA">
+        alphabetically</BUTTON>
+        <BUTTON id="ZaA">
+        difficulty level</BUTTON>
+    </div>
+    <main>
         <!--Show Champions-->
-        <section id="information" class="informationHeros">
-            <!--<div id="AllChampions">
-            </div>
-            <div id="AllImgChampions">
-            </div>
-            <div id="AllInfoChampions">
-                <div id="divAttack">Attack</div>
-                <div id="divDefense">Defense</div>
-                <div id="divMagic">Magic</div>
-                <div id="divDifficulty">Difficulty</div>
-            </div>-->
-        </section>
-        <section>
-            <div id="filter" class="allFilter"></div>
-        </section>
+        <section id="showChampions">
+            <section id="showChampions">
+                <div id="information"></div>
+            </section>
+
+            <section id="showAssassin" class="ocultar">
+                <p id="titleAssassin">ASSASSIN</p>
+                <div id="filterAssassin"></div>
+            </section>
+
+            <section class="ocultar" id="showFighter">
+                <p id="titleFighter">FIGHTER</p>
+                <div id="filterFighter "></div>
+            </section>
+            <section class="ocultar" id="showMage">
+                <p id=titleMage>MAGE</p>
+                <div id="filterMage"></div>
+            </section>
+
+            <section class="ocultar " id="showMarkmen">
+                <p id=titleMarksmen>MARKSMEN</p>
+                <div id="filterMarksman "></div>
+            </section>
+            <section class="ocultar " id="showTank">
+                <p id=titleTank>TANK</p>
+                <div id="filterTank "></div>
+            </section>
+            <section class="ocultar " id="showSupport">
+                <p id=titleSupport>SUPPORT</p>
+                <div id="filterSupport "></div>
+            </section>
+
+            <div id="OrdenarZaZ " class="ocultar "></div>
+
     </main>
+
+
     <br>
     <footer>
-        <div id="rectanglefooter" class="">
+        <div id="rectanglefooter " class=" ">
         </div>
     </footer>
-    <div id="root"></div>
-    <script src="main.js" type="module"></script>
+    <div id="root "></div>-->
+    <script src="main.js" type="module "></script>
 
 </body>
 
