--- a/src/index.html
+++ b/src/index.html
@@ -186,8 +186,8 @@
         <div id="rectanglefooter " class=" ">
         </div>
     </footer>
-    <div id="root "></div>-->
-    <script src="main.js" type="module "></script>
+    <div id="root "></div>
+    <script src="main.js" type="module"></script>
 
 </body>
 
